--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "devDependencies": {
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-typescript": "^7.17.12",
+    "@microsoft/api-documenter": "^7.17.16",
+    "@microsoft/api-extractor": "^7.24.2",
     "@types/jest": "^27.5.1",
     "@types/react": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
